# hands-on-agno

./: .env.example  .gitignore  .replit  HowToRun.md  README.md  jupyter_notebook_config.py  models.py  pyproject.toml  requirements.txt
.specstory/history/: 2025-06-19_13-38-忽略所有目录下的-pycache-文件夹.md  2025-06-19_14-22-什么是-dedent.md
agno-practices/: 00-models.py  01-first-agent-yfinance.py  __init__.py  models_00.py
agno_practices/: 00-basic-model-call.py  01-first-agent-yfinance.py  02-agent-with-knowledge-storage.py  03-agent-with-memory-and-reasonning.py  04-multi-agent-team.py  05-agentic-workflow.py  06-playground.py  07-monitoring.py  08-debug-logs.py  09-research-agent.py  __init__.py  models.py
notebooks/: Untitled.ipynb  async_example.ipynb  list_secrets.ipynb  my-first-agents.ipynb
notebooks/.ipynb_checkpoints/: Untitled-checkpoint.ipynb  streaming_example-checkpoint.ipynb
tmp/: agent.db
tmp/lancedb/agno_docs.lance/_indices/fts/: .managed.json  meta.json
tmp/lancedb/agno_docs.lance/_transactions/: 0-a049b0e8-9dc8-4e96-9f41-3b16936f9d3a.txn  1-5fe6809e-92c2-4ea2-bdfc-2be7748a0d25.txn  2-65cfa6f4-b2b9-4396-bff2-fa1ee336a0b0.txn
tmp/lancedb/agno_docs.lance/_versions/: 1.manifest  2.manifest  3.manifest
tmp/lancedb/agno_docs.lance/data/: 984314ea-59e9-4c20-b8b4-00d275949e44.lance  986808c2-bce4-40ae-9b63-299fe71f4fdb.lance
