[tool.poetry]
name = "jupyter-notebook"
version = "0.1.0"
description = ""
authors = ["Devon Stewart <blast@hardchee.se>"]
readme = "README.md"
packages = [{include = "jupyter_notebook"}]

[tool.poetry.dependencies]
python = "^3.12"
notebook = "^7.2.1"
jupyter = "^1.0.0"
jupyter-server = "^2.14.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
